fix download btn spacing

--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -16,10 +16,13 @@
   padding: 8px 28px;
   border-radius: 50px;
   transition: 0.5s;
-  margin: 10px;
-  margin-top: 25px;
+  margin: 0px, 10px;
   border: 2px solid #2dc997;
   color:#2dc997;
+}
+
+.nopad{
+  padding-bottom: 0px !important;
 }
 
 #resumee .title, #resumee .icon{
